tests/cli/snapshots/cli__clean__clean_refuses_with_dynamic_key.snap
---
source: tests/cli/clean.rs
info:
  program: glot
  args:
    - clean
  env:
    NO_COLOR: "1"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
Error: ✘ Cannot clean, 1 unresolved key warning(s) found.
Unresolved keys prevent tracking all key usage.
Run `glot check` to see details, then fix or suppress them.
warning: "variable key"  [unresolved-key]
  --> ./src/app.tsx:4:18
  |
4 |     return <div>{t(keyName)}</div>;
  |                  ^


✘ 1 problems (0 errors, 1 warning)
