tests/cli/snapshots/cli__clean__clean_respects_unresolved_severity_override.snap
---
source: tests/cli/clean.rs
info:
  program: glot
  args:
    - clean
  env:
    GLOT_DISABLE_TIMING: "1"
    NO_COLOR: "1"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
Error: ✘ Cannot clean, 1 unresolved key issue(s) found.
Unresolved keys prevent tracking all key usage.
Run `glot check` to see details, then fix or suppress them.
error: "variable key"  [unresolved-key]
  --> ./src/app.tsx:4:18
  |
4 |     return <div>{t(keyName)}</div>;
  |                  ^


✘ 1 problems (1 error, 0 warnings)
